--- a/product.html
+++ b/product.html
@@ -94,18 +94,46 @@
                       <table class="my-3">
                           <tr class="font-barlow font-size14">
                               <td>Price:</td>
-                              <td class="font-size-20 text-danger"><strike>$162</strike></td>
+                              <td class="font-size-20 text-danger"><strike>$162.00</strike></td>
                           </tr>
                           <tr class="font-barlow font-size14">
                             <td>Deal Price:</td>
-                            <td class="font-size-20 text-danger">$<span>140</span><small> Inclusive of all taxes</small></td>
+                            <td class="font-size-20 text-danger">$<span>140.00</span><small class="text-dark font-size12">&nbspInclusive of all taxes</small></td>
                           </tr>
                           <tr class="font-barlow font-size14">
                             <td>You save:</td>
-                            <td class="font-size-20 text-danger">$<span>22</span></td>
+                            <td class="font-size-20 text-danger">$<span>22.00</span></td>
                           </tr>
                       </table>
-
+                      <!-- policy-->
+                      <div class="policy">
+                        <div class="d-flex">
+                              <div class="return text-center mr-5">
+                                  <div class="font-size-20 my-2 color-secondary">
+                                      <span class="fas fa-retweet border p-3 rounded-pill"></span>
+                                  </div>
+                                  <a href="#" class="font-pt font-size-12">10 days<br>replacement</a>
+                              </div>
+                              <div class="return text-center mr-5">
+                                <div class="font-size-20 my-2 color-secondary">
+                                    <span class="fas fa-truck border p-3 rounded-pill"></span>
+                                </div>
+                                <a href="#" class="font-pt font-size-12">Fast delivery</a>
+                            </div>
+                            <div class="return text-center mr-5">
+                                <div class="font-size-20 my-2 color-secondary">
+                                    <span class="fas fa-check-double border p-3 rounded-pill"></span>
+                                </div>
+                                <a href="#" class="font-pt font-size-12">1 year<br>warranty</a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="d-flex">
+                            <div class="delivery-details">
+                                <span class="font-pt font-size-20"></span>
+                            </div>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
