Adding delivery date

--- a/product.html
+++ b/product.html
@@ -128,11 +128,11 @@
                             </div>
                         </div>
                         <hr>
-                        <div class="d-flex">
-                            <div class="delivery-details">
-                                <span class="font-pt font-size-20"></span>
+                            <div id="delivery-details" class="font-pt d-flex flex-column text-muted">
+                                <small>Delivered by dec 1 - dec 4</small>
+                                <small>Sold by <a href="#">Daily Electronics</a>&nbsp;(4.5/5 |18 198 ratings)</small>
+                                <small><i class="fas fa-map-marker-alt color-primary"></i>&nbsp;&nbsp;Deliver to customer - 424201</small>
                             </div>
-                        </div>
                       </div>
                     </div>
                 </div>
