--- a/product.html
+++ b/product.html
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 py-5">
                        <h5 class="font-barlow font-size-20">Samsung Galaxy S6 Edge</h5>
                        <small>By Samsung</small>
                        <div class="d-flex">
@@ -108,13 +108,13 @@
                       <!-- policy-->
                       <div class="policy">
                         <div class="d-flex">
-                              <div class="return text-center mr-5">
-                                  <div class="font-size-20 my-2 color-secondary">
-                                      <span class="fas fa-retweet border p-3 rounded-pill"></span>
-                                  </div>
-                                  <a href="#" class="font-pt font-size-12">10 days<br>replacement</a>
-                              </div>
-                              <div class="return text-center mr-5">
+                            <div class="return text-center mr-5">
+                                <div class="font-size-20 my-2 color-secondary">
+                                    <span class="fas fa-retweet border p-3 rounded-pill"></span>
+                                </div>
+                                <a href="#" class="font-pt font-size-12">10 days<br>replacement</a>
+                            </div>
+                            <div class="return text-center mr-5">
                                 <div class="font-size-20 my-2 color-secondary">
                                     <span class="fas fa-truck border p-3 rounded-pill"></span>
                                 </div>
@@ -133,7 +133,53 @@
                                 <small>Sold by <a href="#">Daily Electronics</a>&nbsp;(4.5/5 |18 198 ratings)</small>
                                 <small><i class="fas fa-map-marker-alt color-primary"></i>&nbsp;&nbsp;Deliver to customer - 424201</small>
                             </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="color my-3">
+                                        <div class="d-flex justify-content-between">
+                                           <h6 class="font-barlow">Color:</h6>
+                                           <div class="p-2 color-yellow-bg rounded-circle"><button class="btn font-size-14"></button></div>       
+                                           <div class="p-2 color-primary-bg rounded-circle"><button class="btn font-size-14"></button></div>       
+                                           <div class="p-2 color-secondary-bg rounded-circle"><button class="btn font-size-14"></button></div>       
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="qty d-flex">
+                                        <div class="font-balrow">Qty:</div>
+                                        <div class="px-4 d-flex font-rale">
+                                            <div class="qty-up border bg-light"><i class="fas fa-angle-up"></i></div>
+                                            <input type="text" name="" id="" class="qty_input border px-2 w-50 bg-light text-center" disabled value="1" placeholder="1">
+                                            <div class="qty-up border bg-light"><i class="fas fa-angle-down"></i></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="size my-3">
+                                <h6 class="font-barlow">Size:</h6>
+                                <div class="d-flex justify-content-between w-50">
+                                    <div class="font-josefin border p-2">
+                                        <button class="btn p-0 font-size-14">4Gb</button>
+                                    </div>
+                                    <div class="font-josefin border p-2">
+                                        <button class="btn p-0 font-size-14">8Gb</button>
+                                    </div>
+                                    <div class="font-josefin border p-2">
+                                        <button class="btn p-0 font-size-14">16Gb</button>
+                                    </div>
+                                </div>
+                            </div>
                       </div>
+                    </div>
+                    <div class="col-12">
+                        <h6 class="font-barlow font-size-20">Product description</h6>
+                        <hr>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo non architecto error doloribus, laudantium nesciunt, deserunt adipisci, dolores ex in minus facilis incidunt eligendi repellendus aliquam dolorum aspernatur reiciendis recusandae magni repellat aut at ut! Et molestiae quae sapiente quod vel ratione dolor ut sint corrupti nihil rem possimus maxime quam, nesciunt fuga corporis sed? Voluptate, quisquam minus molestiae numquam voluptas reprehenderit laborum et voluptatum, suscipit eaque quia exercitationem deleniti sed aliquid libero veniam incidunt doloremque! Maiores officiis ducimus omnis?
+                        </p>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo non architecto error doloribus, laudantium nesciunt, deserunt adipisci, dolores ex in minus facilis incidunt eligendi repellendus aliquam dolorum aspernatur reiciendis recusandae magni repellat aut at ut! Et molestiae quae sapiente quod vel ratione dolor ut sint corrupti nihil rem possimus maxime quam, nesciunt fuga corporis sed? Voluptate, quisquam minus molestiae numquam voluptas reprehenderit laborum et voluptatum, suscipit eaque quia exercitationem deleniti sed aliquid libero veniam incidunt doloremque! Maiores officiis ducimus omnis?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -141,7 +187,7 @@
         <!--top-sale-->
         <section id="top-sale">
             <div class="container py-5">
-                <h4 class="font-rubik font-size-20">Top sale</h4>
+                <h4 class="font-barlow font-size-20">Top sale</h4>
                 <hr>
                 <div class="owl-carousel owl-theme">
                     <div class="item py-2">
