--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="product font-barlow">
                             <a href="#"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
-                                <h6>Samsung Galaxy 10</h6>
+                                <h6>Samsung Galaxy S6 Edge</h6>
                                 <div class="rating text-warning font-size-12">
                                     <span><i class="fas fa-star"></i></span>
                                     <span><i class="fas fa-star"></i></span>
@@ -335,9 +335,9 @@
                     <div class="grid-item Samsung">
                         <div class="item py-2" style="width:200px">
                             <div class="product font-barlow">
-                                <a href="#"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
+                                <a href="http://127.0.0.1:5500/product.html"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
-                                    <h6>Samsung</h6>
+                                    <h6>Samsung Galaxy S6 Edge</h6>
                                     <div class="rating text-warning font-size-12">
                                         <span><i class="fas fa-star"></i></span>
                                         <span><i class="fas fa-star"></i></span>
