--- a/cart.html
+++ b/cart.html
@@ -53,7 +53,7 @@
               <form action="#" class="font-size-14 font-barlow">
                   <a href="#" class="py-2 rounded-pill color-primary-bg">
                     <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="px-3 py-2 rounded-pill text-dark bg-light">0</span>
+                    <span class="px-3 py-2 rounded-pill text-success bg-light">0</span>
                   </a>
               </form>
             </div>
@@ -61,133 +61,89 @@
     </header>
     <!-- main-->
     <main id="main-site">
-        <!--product-->
-        <section id="product" class="py-3">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <img src="./assets/products/1.png" alt="product" class="img-fluid">
-                        <div class="form-row pt-4 font-size-16 font-barlow">
-                            <div class="col">
-                                <button type="submit" class="btn btn-danger form-control">Proceed to buy</button>
-                            </div>
-                            <div class="col">
-                                <button type="submit" class="btn btn-warning form-control">Add to cart</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 py-5">
-                       <h5 class="font-barlow font-size-20">Samsung Galaxy S6 Edge</h5>
-                       <small>By Samsung</small>
-                       <div class="d-flex">
-                        <div class="rating text-warning font-size-12">
-                            <span><i class="fas fa-star"></i></span>
-                            <span><i class="fas fa-star"></i></span>
-                            <span><i class="fas fa-star"></i></span>
-                            <span><i class="fas fa-star"></i></span>
-                            <span><i class="far fa-star"></i></span>
-                        </div>
-                        <a href="#" class="px-2 font-barlow font-size-14">20 534 ratings | 1000+ answered questions</a>
-                       </div>
-                      <hr class="m-0"> 
-                      <!--product price-->
-                      <table class="my-3">
-                          <tr class="font-barlow font-size14">
-                              <td>Price:</td>
-                              <td class="font-size-20 text-danger"><strike>$162.00</strike></td>
-                          </tr>
-                          <tr class="font-barlow font-size14">
-                            <td>Deal Price:</td>
-                            <td class="font-size-20 text-danger">$<span>140.00</span><small class="text-dark font-size12">&nbspInclusive of all taxes</small></td>
-                          </tr>
-                          <tr class="font-barlow font-size14">
-                            <td>You save:</td>
-                            <td class="font-size-20 text-danger">$<span>22.00</span></td>
-                          </tr>
-                      </table>
-                      <!-- policy-->
-                      <div class="policy">
-                        <div class="d-flex">
-                            <div class="return text-center mr-5">
-                                <div class="font-size-20 my-2 color-secondary">
-                                    <span class="fas fa-retweet border p-3 rounded-pill"></span>
+        <!--shopping cart section-->
+        <section id="cart" class="py-3">
+            <div class="container-fluid w-75">
+                <h5 class="font-barlow font-size-20">Shopping cart</h5>
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <div class="row border-top py-3 mt-3">
+                                <div class="col-sm-2">
+                                    <img src="./assets/products/1.png" alt="product1" class="img-fluid" style="height: 120px">
                                 </div>
-                                <a href="#" class="font-pt font-size-12">10 days<br>replacement</a>
-                            </div>
-                            <div class="return text-center mr-5">
-                                <div class="font-size-20 my-2 color-secondary">
-                                    <span class="fas fa-truck border p-3 rounded-pill"></span>
-                                </div>
-                                <a href="#" class="font-pt font-size-12">Fast delivery</a>
-                            </div>
-                            <div class="return text-center mr-5">
-                                <div class="font-size-20 my-2 color-secondary">
-                                    <span class="fas fa-check-double border p-3 rounded-pill"></span>
-                                </div>
-                                <a href="#" class="font-pt font-size-12">1 year<br>warranty</a>
-                            </div>
-                        </div>
-                        <hr>
-                            <div id="delivery-details" class="font-pt d-flex flex-column text-muted">
-                                <small>Delivered by dec 1 - dec 4</small>
-                                <small>Sold by <a href="#">Daily Electronics</a>&nbsp;(4.5/5 |18 198 ratings)</small>
-                                <small><i class="fas fa-map-marker-alt color-primary"></i>&nbsp;&nbsp;Deliver to customer - 424201</small>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="color my-3">
-                                        <div class="d-flex justify-content-between">
-                                           <h6 class="font-barlow">Color:</h6>
-                                           <div class="p-2 color-yellow-bg rounded-circle"><button class="btn font-size-14"></button></div>       
-                                           <div class="p-2 color-primary-bg rounded-circle"><button class="btn font-size-14"></button></div>       
-                                           <div class="p-2 color-secondary-bg rounded-circle"><button class="btn font-size-14"></button></div>       
+                                <div class="col-sm-8">
+                                    <h5 class="font-barlow font-size-20">Samsung Galaxy S6 Edge</h5>
+                                    <small>by Samsung</small>
+                                    <div class="d-flex">
+                                        <div class="rating text-warning font-size-12">
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="far fa-star"></i></span>
                                         </div>
+                                        <a href="#" class="px-2 font-josefin font-size-14">20 534 ratings</a>
                                     </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="qty d-flex">
-                                        <div class="font-balrow">Qty:</div>
-                                        <div class="px-4 d-flex font-rale">
-                                            <div class="qty-up border bg-light"><i class="fas fa-angle-up"></i></div>
-                                            <input type="text" name="" id="" class="qty_input border px-2 w-50 bg-light text-center" disabled value="1" placeholder="1">
-                                            <div class="qty-down border bg-light"><i class="fas fa-angle-down"></i></div>
+                                    <div class="qty d-flex pt-2">
+                                        <div class="d-flex font-barlow w-25">
+                                            <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
+                                            <input type="text" class="qty_input border px-2 w-100 bg-light text-center" disabled value="1" placeholder="1">
+                                            <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
                                         </div>
+                                        <button type="submit" class="btn font-barlow text-danger px-3 border-right">Delete</button>
+                                        <button type="submit" class="btn font-barlow text-danger">Save for later</button>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="font-size-20 text-danger font-barlow text-right">
+                                        $<span class="product_price">152</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="size my-3">
-                                <h6 class="font-barlow">Size:</h6>
-                                <div class="d-flex justify-content-between w-50">
-                                    <div class="font-josefin border p-2">
-                                        <button class="btn p-0 font-size-14">4Gb</button>
+                            <div class="row border-top py-3 mt-3">
+                                <div class="col-sm-2">
+                                    <img src="./assets/products/2.png" alt="product1" class="img-fluid" style="height: 120px">
+                                </div>
+                                <div class="col-sm-8">
+                                    <h5 class="font-barlow font-size-20">Redmi</h5>
+                                    <small>by Redmi</small>
+                                    <div class="d-flex">
+                                        <div class="rating text-warning font-size-12">
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="fas fa-star"></i></span>
+                                            <span><i class="far fa-star"></i></span>
+                                        </div>
+                                        <a href="#" class="px-2 font-josefin font-size-14">11 862 ratings</a>
                                     </div>
-                                    <div class="font-josefin border p-2">
-                                        <button class="btn p-0 font-size-14">8Gb</button>
+                                    <div class="qty d-flex pt-2">
+                                        <div class="d-flex font-barlow w-25">
+                                            <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
+                                            <input type="text" class="qty_input border px-2 w-100 bg-light text-center" disabled value="1" placeholder="1">
+                                            <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
+                                        </div>
+                                        <button type="submit" class="btn font-barlow text-danger px-3 border-right">Delete</button>
+                                        <button type="submit" class="btn font-barlow text-danger">Save for later</button>
                                     </div>
-                                    <div class="font-josefin border p-2">
-                                        <button class="btn p-0 font-size-14">16Gb</button>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="font-size-20 text-danger font-barlow text-right">
+                                        $<span class="product_price">102</span>
                                     </div>
                                 </div>
                             </div>
-                      </div>
+                        </div>
+                        <div class="col-sm-3">
+                                
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <h6 class="font-barlow font-size-20">Product description</h6>
-                        <hr>
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo non architecto error doloribus, laudantium nesciunt, deserunt adipisci, dolores ex in minus facilis incidunt eligendi repellendus aliquam dolorum aspernatur reiciendis recusandae magni repellat aut at ut! Et molestiae quae sapiente quod vel ratione dolor ut sint corrupti nihil rem possimus maxime quam, nesciunt fuga corporis sed? Voluptate, quisquam minus molestiae numquam voluptas reprehenderit laborum et voluptatum, suscipit eaque quia exercitationem deleniti sed aliquid libero veniam incidunt doloremque! Maiores officiis ducimus omnis?
-                        </p>
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo non architecto error doloribus, laudantium nesciunt, deserunt adipisci, dolores ex in minus facilis incidunt eligendi repellendus aliquam dolorum aspernatur reiciendis recusandae magni repellat aut at ut! Et molestiae quae sapiente quod vel ratione dolor ut sint corrupti nihil rem possimus maxime quam, nesciunt fuga corporis sed? Voluptate, quisquam minus molestiae numquam voluptas reprehenderit laborum et voluptatum, suscipit eaque quia exercitationem deleniti sed aliquid libero veniam incidunt doloremque! Maiores officiis ducimus omnis?
-                        </p>
-                    </div>
-                </div>
             </div>
         </section>
-        <!--top-sale-->
-        <section id="top-sale">
-            <div class="container py-5">
-                <h4 class="font-barlow font-size-20">Top sale</h4>
+        <!--New phones-->
+        <section id="new-phones">
+            <div class="container">
+                <h4 class="font-barlow font-size-20">New phones</h4>
                 <hr>
                 <div class="owl-carousel owl-theme">
                     <div class="item py-2">
