--- a/product.html
+++ b/product.html
@@ -51,9 +51,9 @@
                 </li>
               </ul>
               <form action="#" class="font-size-14 font-barlow">
-                  <a href="#" class="py-2 rounded-pill color-primary-bg">
+                  <a href="http://127.0.0.1:5500/cart.html" class="py-2 rounded-pill color-primary-bg">
                     <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="px-3 py-2 rounded-pill text-dark bg-light">0</span>
+                    <span class="px-3 py-2 rounded-pill text-success bg-light">0</span>
                   </a>
               </form>
             </div>
@@ -148,9 +148,9 @@
                                     <div class="qty d-flex">
                                         <div class="font-balrow">Qty:</div>
                                         <div class="px-4 d-flex font-rale">
-                                            <div class="qty-up border bg-light"><i class="fas fa-angle-up"></i></div>
+                                            <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
                                             <input type="text" name="" id="" class="qty_input border px-2 w-50 bg-light text-center" disabled value="1" placeholder="1">
-                                            <div class="qty-down border bg-light"><i class="fas fa-angle-down"></i></div>
+                                            <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
                                         </div>
                                     </div>
                                 </div>
