updating anchor tags links

--- a/product.html
+++ b/product.html
@@ -51,7 +51,7 @@
                 </li>
               </ul>
               <form action="#" class="font-size-14 font-barlow">
-                  <a href="http://127.0.0.1:5500/cart.html" class="py-2 rounded-pill color-primary-bg">
+                  <a href="http://cyrilrufin.me/cart.html" class="py-2 rounded-pill color-primary-bg">
                     <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
                     <span class="px-3 py-2 rounded-pill text-success bg-light">0</span>
                   </a>
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <img src="./assets/products/1.png" alt="product" class="img-fluid">
+                        <a href="http://cyrilrufin.me/product.html"><img src="./assets/products/1.png" alt="product" class="img-fluid"></a>
                         <div class="form-row pt-4 font-size-16 font-barlow">
                             <div class="col">
                                 <button type="submit" class="btn btn-danger form-control">Proceed to buy</button>
