--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <div class="grid-item Samsung">
                         <div class="item py-2" style="width:200px">
                             <div class="product font-barlow">
-                                <a href="http://127.0.0.1:5500/product.html"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
+                                <a href="http://cyrilrufin.me/product.html"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy S6 Edge</h6>
                                     <div class="rating text-warning font-size-12">
