updating anchor tags links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </li>
               </ul>
               <form action="#" class="font-size-14 font-barlow">
-                  <a href="http:cyrilrufin.me/cart.html" class="py-2 rounded-pill color-primary-bg">
+                  <a href="http:cyrilrufin.me/e-commerce/cart.html" class="py-2 rounded-pill color-primary-bg">
                     <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
                     <span class="px-3 py-2 rounded-pill text-dark bg-light">0</span>
                   </a>
@@ -335,7 +335,7 @@
                     <div class="grid-item Samsung">
                         <div class="item py-2" style="width:200px">
                             <div class="product font-barlow">
-                                <a href="http://cyrilrufin.me/product.html"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
+                                <a href="http://cyrilrufin.me/e-commerce/product.html"><img src="./assets/products/1.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy S6 Edge</h6>
                                     <div class="rating text-warning font-size-12">
