--- a/product.html
+++ b/product.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="http://cyrilrufin.me/product.html"><img src="./assets/products/1.png" alt="product" class="img-fluid"></a>
+                        <a href="http://cyrilrufin.me/e-commerce/product.html"><img src="./assets/products/1.png" alt="product" class="img-fluid"></a>
                         <div class="form-row pt-4 font-size-16 font-barlow">
                             <div class="col">
                                 <button type="submit" class="btn btn-danger form-control">Proceed to buy</button>
