--- a/cart.html
+++ b/cart.html
@@ -86,9 +86,9 @@
                                     </div>
                                     <div class="qty d-flex pt-2">
                                         <div class="d-flex font-barlow w-25">
-                                            <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
-                                            <input type="text" class="qty_input border px-2 w-100 bg-light text-center" disabled value="1" placeholder="1">
-                                            <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
+                                            <button class="qty-up border bg-light" data-id="product1"><i class="fas fa-angle-up"></i></button>
+                                            <input type="text" class="qty_input border px-2 w-100 bg-light text-center" data-id="product1" disabled value="1" placeholder="1">
+                                            <button class="qty-down border bg-light" data-id="product1"><i class="fas fa-angle-down"></i></button>
                                         </div>
                                         <button type="submit" class="btn font-barlow text-danger px-3 border-right">Delete</button>
                                         <button type="submit" class="btn font-barlow text-danger">Save for later</button>
@@ -119,9 +119,9 @@
                                     </div>
                                     <div class="qty d-flex pt-2">
                                         <div class="d-flex font-barlow w-25">
-                                            <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
-                                            <input type="text" class="qty_input border px-2 w-100 bg-light text-center" disabled value="1" placeholder="1">
-                                            <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
+                                            <button class="qty-up border bg-light" data-id="product2"><i class="fas fa-angle-up"></i></button>
+                                            <input type="text" data-id="product2" class="qty_input border px-2 w-100 bg-light text-center" disabled value="1" placeholder="1">
+                                            <button class="qty-down border bg-light" data-id="product2"><i class="fas fa-angle-down"></i></button>
                                         </div>
                                         <button type="submit" class="btn font-barlow text-danger px-3 border-right">Delete</button>
                                         <button type="submit" class="btn font-barlow text-danger">Save for later</button>
@@ -135,14 +135,20 @@
                             </div>
                         </div>
                         <div class="col-sm-3">
-                                
+                              <div class="sub-total text-center mt-2 border">
+                                  <h6 class="font-size-12 font-barlow py-3 text-success"><i class="fas fa-check">Your order is eligible for FREE delivery</i></h6>
+                                  <div class="border-top py-4">
+                                      <h5 class="font-josefin font-size-20">Subtotal (2 items)&nbsp;<span class="text-danger">$<span class="text-danger" id="deal-price">254</span></span></h5>
+                                      <button type="submit" class ="btn btn-warning">Proceed to buy</button>
+                                    </div>
+                              </div>  
                         </div>
                     </div>
             </div>
         </section>
         <!--New phones-->
         <section id="new-phones">
-            <div class="container">
+            <div class="container py-5">
                 <h4 class="font-barlow font-size-20">New phones</h4>
                 <hr>
                 <div class="owl-carousel owl-theme">
